--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div id="root"></div>
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="./app.js"></script>
+    <div id="root">Kaustubh is here.</div>
+    <script type="module" src="./app.js"></script>
 </body>
 </html>
